[package]
name = "limp"
description = "effortless project initialization and dependency management"
license = "MIT"
authors = ["Nobel von it"]
repository = "https://github.com/nobel-von-it/limp"
version = "0.1.1"
edition = "2021"

[dependencies]
reqwest = {version ="0.12.7", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
